data/derived/fa15/progs/unify/prog3681.ml.out
Characters 61-66:
  let fixpoint (f,b) = wwhile (let fin bt = (bt, f bt = bt) in fin b ,b);;
                                                               ^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
